--- a/.github/workflows/main_scwebservice.yml
+++ b/.github/workflows/main_scwebservice.yml
@@ -7,33 +7,77 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+        - main
   workflow_dispatch:
-
 jobs:
-  build:
+
+  test:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
-
+      contents: read
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
-
-      - name: dotnet publish
-        run: dotnet publish -c Release #-o ${{env.DOTNET_ROOT}}/myapp
-
-      - name: Upload artifact for deployment job
+      
+      - name: Restore dependencies
+        run: dotnet restore
+      
+      - name: Build for testing
+        run: dotnet build --no-restore --configuration Release
+      
+      - name: Run tests
+        run: dotnet test --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
+      
+      - name: Upload test results
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: test-results
+          path: TestResults/
+      
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v3
+        if: success()
+        with:
+          file: ./TestResults/*/coverage.cobertura.xml
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
+        contents: read
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up .NET Core
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.x'
+
+    - name: Find ASP.NET Core project
+      id: findproject
+      run: |
+        webproj=$(find . -name "*.csproj" -exec grep -l 'Microsoft.NET.Sdk.Web' {} \;)
+        echo "project=$webproj" >> "$GITHUB_OUTPUT"
+
+    - name: Build with dotnet
+      run: dotnet build "${{ steps.findproject.outputs.project }}" --configuration Release
+
+    - name: dotnet publish
+      run: dotnet publish "${{ steps.findproject.outputs.project }}" -c Release -o ${{env.DOTNET_ROOT}}/myapp
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v4
+      with:
+        name: .net-app
+        path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: ubuntu-latest
