--- a/.github/workflows/main_scwebservice.yml
+++ b/.github/workflows/main_scwebservice.yml
@@ -70,6 +70,10 @@ jobs:
     - name: Build with dotnet
       run: dotnet build "${{ steps.findproject.outputs.project }}" --configuration Release
 
+
+    - name: Clean publish folder
+      run: rm -rf ${{env.DOTNET_ROOT}}/myapp
+
     - name: dotnet publish
       run: dotnet publish "${{ steps.findproject.outputs.project }}" -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
