--- a/.github/workflows/main_scwebservice.yml
+++ b/.github/workflows/main_scwebservice.yml
@@ -71,8 +71,8 @@ jobs:
       run: dotnet build "${{ steps.findproject.outputs.project }}" --configuration Release
 
 
-    - name: Clean publish folder
-      run: rm -rf ${{env.DOTNET_ROOT}}/myapp
+    - name: Clean solution
+      run: dotnet clean
 
     - name: dotnet publish
       run: dotnet publish "${{ steps.findproject.outputs.project }}" -c Release -o ${{env.DOTNET_ROOT}}/myapp
